# rk-smart-terrarium

./: CMakeLists.txt  README.md
include/: Client.h  Server.h  client.hpp  server.hpp
src/: client.cpp  main_client.cpp  main_server.cpp  server.cpp
